--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -116,40 +116,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-16 15:09:00 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-16 15:09:00 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-16 15:09:03 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-16 15:09:03 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-16 15:09:08 | AvitoParser: 23 pages for read\n",
-      "[INFO    ] 2022-09-16 15:09:08 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-16 15:09:13 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-16 15:09:17 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-16 15:09:22 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-16 15:09:25 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-16 15:09:29 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-16 15:09:33 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-16 15:09:38 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-16 15:09:44 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-16 15:09:47 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-16 15:09:54 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-16 15:09:57 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-16 15:10:02 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-16 15:10:05 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-16 15:10:08 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-16 15:10:11 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-16 15:10:14 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-16 15:10:17 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-16 15:10:21 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-16 15:10:23 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-16 15:10:26 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-16 15:10:29 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-16 15:10:32 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-16 15:10:34 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-16 15:10:34 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-16 15:10:34 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "1114\n",
-      "CPU times: user 4.52 s, sys: 175 ms, total: 4.7 s\n",
-      "Wall time: 1min 34s\n"
+      "[INFO    ] 2022-09-19 12:38:09 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-19 12:38:09 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-19 12:38:11 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-19 12:38:11 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-19 12:38:20 | AvitoParser: 23 pages for read\n",
+      "[INFO    ] 2022-09-19 12:38:20 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-19 12:38:23 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-19 12:38:28 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-19 12:38:31 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-19 12:38:35 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-19 12:38:39 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-19 12:38:45 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-19 12:38:49 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-19 12:38:53 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-19 12:38:58 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-19 12:39:04 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-19 12:39:07 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-19 12:39:10 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-19 12:39:14 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-19 12:39:17 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-19 12:39:21 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-19 12:39:26 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-19 12:39:30 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-19 12:39:34 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-19 12:39:40 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-19 12:39:44 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-19 12:39:48 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-19 12:39:51 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-19 12:39:53 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-19 12:39:53 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-19 12:39:54 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "1104\n",
+      "CPU times: user 4.54 s, sys: 185 ms, total: 4.72 s\n",
+      "Wall time: 1min 45s\n"
      ]
     }
    ],
@@ -177,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1114\n",
-      "1100\n"
+      "1104\n",
+      "1104\n"
      ]
     }
    ],
@@ -250,27 +250,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>454</th>\n",
-       "      <td>2518461426</td>\n",
-       "      <td>Объявление «Участок 25 сот. (ИЖС)» 5 фотографий</td>\n",
-       "      <td>800000</td>\n",
+       "      <th>437</th>\n",
+       "      <td>2448235138</td>\n",
+       "      <td>Объявление «Участок 8 сот. (ИЖС)» 5 фотографий</td>\n",
+       "      <td>3500000</td>\n",
        "      <td></td>\n",
-       "      <td>Республика Крым, Бахчисарайский район, Песчановское сельское поселение</td>\n",
-       "      <td>Хотите купить участок рядом с морем?! \\nТогда заходите к нам в гости! \\n\\nПредлагаем Участок площадью 25 соток Лпх ( личное подсобное хозяйство), с. Песчаное, Бахчисарайский район, расположенный 35 км от Симферополя, 25 км. От Бахчисарая и всего 1,5 км. До мо</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2022-09-16 15:10:34.058911</td>\n",
+       "      <td>с. Флотское, Ягодная ул.</td>\n",
+       "      <td>Арт. 24777666 Торг после осмотра. \\n\\nПродам видовой участок 8 соток (Ижс), село Флотское. \\nКоммуникации: \\nэлектричество — 15 квт.\\nВода — центральный водопровод по границе участка.\\n\\nГаз — проведение запланировано на конец 2022 года.\\n\\nУчасток правильной формы</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2022-09-19 12:39:53.571271</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>2509245137</td>\n",
-       "      <td>Объявление «Участок 9,3 сот. (ИЖС)» 4 фотографии</td>\n",
-       "      <td>5800000</td>\n",
+       "      <th>411</th>\n",
+       "      <td>2529306780</td>\n",
+       "      <td>Объявление «Участок 7,5 сот. (ИЖС)» с фотографией</td>\n",
+       "      <td>7000000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Бориса Шейнина, 60</td>\n",
-       "      <td>Расположение: \\n\\nПродам земельный участок Ижс с великолепным видом на море и сосновый лес. \\n\\nУчасток крайний на улице, что дает преимущество в виде отсутствия соседей с одной из сторон. \\n\\nХарактеристики земельного участка: \\n\\n-Электричество-15 Квт.\\n\\n-Водосна</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2022-09-16 15:10:34.058911</td>\n",
+       "      <td>Пасечный пр., 3</td>\n",
+       "      <td>Участок 7,5 соток ижс. Выход на 2 улицы. На участке проведено вода, свет ( заведено 380), очистные ( сданы в архитектуру), видеонаблюдение ( +онлайн), интернет. Имеется разрешение на строительство дома все документы чистые, российские. Один собственник Я.</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2022-09-19 12:39:53.571271</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -278,25 +278,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                             title    price  \\\n",
-       "454  2518461426   Объявление «Участок 25 сот. (ИЖС)» 5 фотографий   800000   \n",
-       "153  2509245137  Объявление «Участок 9,3 сот. (ИЖС)» 4 фотографии  5800000   \n",
+       "       avito_id                                              title    price  \\\n",
+       "437  2448235138     Объявление «Участок 8 сот. (ИЖС)» 5 фотографий  3500000   \n",
+       "411  2529306780  Объявление «Участок 7,5 сот. (ИЖС)» с фотографией  7000000   \n",
        "\n",
-       "    obj_name  \\\n",
-       "454            \n",
-       "153            \n",
+       "    obj_name                       adr  \\\n",
+       "437           с. Флотское, Ягодная ул.   \n",
+       "411                    Пасечный пр., 3   \n",
        "\n",
-       "                                                                        adr  \\\n",
-       "454  Республика Крым, Бахчисарайский район, Песчановское сельское поселение   \n",
-       "153                                                  ул. Бориса Шейнина, 60   \n",
-       "\n",
-       "                                                                                                                                                                                                                                                                    description  \\\n",
-       "454         Хотите купить участок рядом с морем?! \\nТогда заходите к нам в гости! \\n\\nПредлагаем Участок площадью 25 соток Лпх ( личное подсобное хозяйство), с. Песчаное, Бахчисарайский район, расположенный 35 км от Симферополя, 25 км. От Бахчисарая и всего 1,5 км. До мо   \n",
-       "153  Расположение: \\n\\nПродам земельный участок Ижс с великолепным видом на море и сосновый лес. \\n\\nУчасток крайний на улице, что дает преимущество в виде отсутствия соседей с одной из сторон. \\n\\nХарактеристики земельного участка: \\n\\n-Электричество-15 Квт.\\n\\n-Водосна   \n",
+       "                                                                                                                                                                                                                                                                   description  \\\n",
+       "437  Арт. 24777666 Торг после осмотра. \\n\\nПродам видовой участок 8 соток (Ижс), село Флотское. \\nКоммуникации: \\nэлектричество — 15 квт.\\nВода — центральный водопровод по границе участка.\\n\\nГаз — проведение запланировано на конец 2022 года.\\n\\nУчасток правильной формы   \n",
+       "411           Участок 7,5 соток ижс. Выход на 2 улицы. На участке проведено вода, свет ( заведено 380), очистные ( сданы в архитектуру), видеонаблюдение ( +онлайн), интернет. Имеется разрешение на строительство дома все документы чистые, российские. Один собственник Я.    \n",
        "\n",
        "     page                         ts       place  \n",
-       "454    10 2022-09-16 15:10:34.058911  sevastopol  \n",
-       "153     4 2022-09-16 15:10:34.058911  sevastopol  "
+       "437     9 2022-09-19 12:39:53.571271  sevastopol  \n",
+       "411     9 2022-09-19 12:39:53.571271  sevastopol  "
       ]
      },
      "execution_count": 10,
