--- a/06a-data-join-flat.ipynb
+++ b/06a-data-join-flat.ipynb
@@ -128,7 +128,8 @@
        " 'data/raw/flat/avito/avito_2022-09-12_13-44_raw.xlsx',\n",
        " 'data/raw/flat/avito/avito_2022-09-13_13-55_raw.xlsx',\n",
        " 'data/raw/flat/avito/avito_2022-09-15_10-27_raw.xlsx',\n",
-       " 'data/raw/flat/avito/avito_2022-09-16_15-07_raw.xlsx']"
+       " 'data/raw/flat/avito/avito_2022-09-16_15-07_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-19_12-36_raw.xlsx']"
       ]
      },
      "execution_count": 6,
@@ -158,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18943\n"
+      "19375\n"
      ]
     }
    ],
@@ -200,32 +201,32 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 18943 entries, 0 to 18942\n",
+      "RangeIndex: 19375 entries, 0 to 19374\n",
       "Data columns (total 22 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   avito_id       18943 non-null  int64         \n",
-      " 1   title          18943 non-null  object        \n",
-      " 2   price          18943 non-null  int64         \n",
-      " 3   adr            18943 non-null  object        \n",
-      " 4   description    18943 non-null  object        \n",
-      " 5   obj_name       18943 non-null  object        \n",
-      " 6   ts             18943 non-null  datetime64[ns]\n",
-      " 7   avito_page     18943 non-null  int64         \n",
-      " 8   place          18943 non-null  object        \n",
-      " 9   nrooms         18943 non-null  int64         \n",
-      " 10  floor          18943 non-null  int64         \n",
-      " 11  nfloors        18943 non-null  int64         \n",
-      " 12  area           18943 non-null  float64       \n",
-      " 13  is_studio      18943 non-null  bool          \n",
-      " 14  is_apartment   18943 non-null  bool          \n",
-      " 15  is_part        18943 non-null  bool          \n",
-      " 16  is_auction     18943 non-null  bool          \n",
-      " 17  is_openspace   18943 non-null  bool          \n",
-      " 18  is_roof        18943 non-null  bool          \n",
-      " 19  is_SNT         18943 non-null  bool          \n",
-      " 20  priceM         18943 non-null  float64       \n",
-      " 21  is_last_floor  18943 non-null  bool          \n",
+      " 0   avito_id       19375 non-null  int64         \n",
+      " 1   title          19375 non-null  object        \n",
+      " 2   price          19375 non-null  int64         \n",
+      " 3   adr            19375 non-null  object        \n",
+      " 4   description    19375 non-null  object        \n",
+      " 5   obj_name       19375 non-null  object        \n",
+      " 6   ts             19375 non-null  datetime64[ns]\n",
+      " 7   avito_page     19375 non-null  int64         \n",
+      " 8   place          19375 non-null  object        \n",
+      " 9   nrooms         19375 non-null  int64         \n",
+      " 10  floor          19375 non-null  int64         \n",
+      " 11  nfloors        19375 non-null  int64         \n",
+      " 12  area           19375 non-null  float64       \n",
+      " 13  is_studio      19375 non-null  bool          \n",
+      " 14  is_apartment   19375 non-null  bool          \n",
+      " 15  is_part        19375 non-null  bool          \n",
+      " 16  is_auction     19375 non-null  bool          \n",
+      " 17  is_openspace   19375 non-null  bool          \n",
+      " 18  is_roof        19375 non-null  bool          \n",
+      " 19  is_SNT         19375 non-null  bool          \n",
+      " 20  priceM         19375 non-null  float64       \n",
+      " 21  is_last_floor  19375 non-null  bool          \n",
       "dtypes: bool(8), datetime64[ns](1), float64(2), int64(6), object(5)\n",
       "memory usage: 2.2+ MB\n"
      ]
@@ -310,7 +311,8 @@
        " 'data/raw/flat/cian/cian_2022-09-12_13-59_raw.pkl',\n",
        " 'data/raw/flat/cian/cian_2022-09-13_13-59_raw.pkl',\n",
        " 'data/raw/flat/cian/cian_2022-09-15_10-30_raw.pkl',\n",
-       " 'data/raw/flat/cian/cian_2022-09-16_15-11_raw.pkl']"
+       " 'data/raw/flat/cian/cian_2022-09-16_15-11_raw.pkl',\n",
+       " 'data/raw/flat/cian/cian_2022-09-19_12-40_raw.pkl']"
       ]
      },
      "execution_count": 12,
@@ -360,24 +362,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7499 entries, 0 to 7498\n",
+      "RangeIndex: 8995 entries, 0 to 8994\n",
       "Data columns (total 12 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   OfferTitle     7499 non-null   object        \n",
-      " 1   OfferSubtitle  7499 non-null   object        \n",
-      " 2   Deadline       7499 non-null   object        \n",
-      " 3   MainPrice      7499 non-null   object        \n",
-      " 4   PriceInfo      7499 non-null   object        \n",
-      " 5   GeoLabel       7499 non-null   object        \n",
-      " 6   TimeLabel      7499 non-null   object        \n",
-      " 7   LinkArea       7499 non-null   object        \n",
-      " 8   Description    7499 non-null   object        \n",
-      " 9   cian_page      7499 non-null   int64         \n",
-      " 10  ts             7499 non-null   datetime64[ns]\n",
-      " 11  place          7499 non-null   object        \n",
+      " 0   OfferTitle     8995 non-null   object        \n",
+      " 1   OfferSubtitle  8995 non-null   object        \n",
+      " 2   Deadline       8995 non-null   object        \n",
+      " 3   MainPrice      8995 non-null   object        \n",
+      " 4   PriceInfo      8995 non-null   object        \n",
+      " 5   GeoLabel       8995 non-null   object        \n",
+      " 6   TimeLabel      8995 non-null   object        \n",
+      " 7   LinkArea       8995 non-null   object        \n",
+      " 8   Description    8995 non-null   object        \n",
+      " 9   cian_page      8995 non-null   int64         \n",
+      " 10  ts             8995 non-null   datetime64[ns]\n",
+      " 11  place          8995 non-null   object        \n",
       "dtypes: datetime64[ns](1), int64(1), object(10)\n",
-      "memory usage: 703.2+ KB\n"
+      "memory usage: 843.4+ KB\n"
      ]
     }
    ],
@@ -454,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7499\n"
+      "8995\n"
      ]
     }
    ],
@@ -487,34 +489,34 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7499 entries, 0 to 7498\n",
+      "RangeIndex: 8995 entries, 0 to 8994\n",
       "Data columns (total 22 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   title          7499 non-null   object        \n",
-      " 1   obj_name       7499 non-null   object        \n",
-      " 2   adr            7499 non-null   object        \n",
-      " 3   nrooms         7499 non-null   int64         \n",
-      " 4   floor          7499 non-null   int64         \n",
-      " 5   nfloors        7499 non-null   int64         \n",
-      " 6   area           7499 non-null   float64       \n",
-      " 7   is_studio      7499 non-null   bool          \n",
-      " 8   is_apartment   7499 non-null   bool          \n",
-      " 9   is_part        7499 non-null   bool          \n",
-      " 10  is_auction     7499 non-null   bool          \n",
-      " 11  is_openspace   7499 non-null   bool          \n",
-      " 12  is_roof        7499 non-null   bool          \n",
-      " 13  is_SNT         7499 non-null   bool          \n",
-      " 14  price          7499 non-null   int64         \n",
-      " 15  priceM         7499 non-null   float64       \n",
-      " 16  is_last_floor  7499 non-null   bool          \n",
-      " 17  cian_url       7499 non-null   object        \n",
-      " 18  description    7499 non-null   object        \n",
-      " 19  cian_page      7499 non-null   int64         \n",
-      " 20  ts             7499 non-null   datetime64[ns]\n",
-      " 21  place          7499 non-null   object        \n",
+      " 0   title          8995 non-null   object        \n",
+      " 1   obj_name       8995 non-null   object        \n",
+      " 2   adr            8995 non-null   object        \n",
+      " 3   nrooms         8995 non-null   int64         \n",
+      " 4   floor          8995 non-null   int64         \n",
+      " 5   nfloors        8995 non-null   int64         \n",
+      " 6   area           8995 non-null   float64       \n",
+      " 7   is_studio      8995 non-null   bool          \n",
+      " 8   is_apartment   8995 non-null   bool          \n",
+      " 9   is_part        8995 non-null   bool          \n",
+      " 10  is_auction     8995 non-null   bool          \n",
+      " 11  is_openspace   8995 non-null   bool          \n",
+      " 12  is_roof        8995 non-null   bool          \n",
+      " 13  is_SNT         8995 non-null   bool          \n",
+      " 14  price          8995 non-null   int64         \n",
+      " 15  priceM         8995 non-null   float64       \n",
+      " 16  is_last_floor  8995 non-null   bool          \n",
+      " 17  cian_url       8995 non-null   object        \n",
+      " 18  description    8995 non-null   object        \n",
+      " 19  cian_page      8995 non-null   int64         \n",
+      " 20  ts             8995 non-null   datetime64[ns]\n",
+      " 21  place          8995 non-null   object        \n",
       "dtypes: bool(8), datetime64[ns](1), float64(2), int64(5), object(6)\n",
-      "memory usage: 878.9+ KB\n"
+      "memory usage: 1.0+ MB\n"
      ]
     }
    ],
@@ -596,7 +598,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26442\n"
+      "28370\n"
      ]
     }
    ],
@@ -668,21 +670,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-16 15:31:21 | LocationUpdater: 9821 addresses in location table\n",
-      "[INFO    ] 2022-09-16 15:31:21 | LocationUpdater: 10044 addresses total\n",
-      "[INFO    ] 2022-09-16 15:31:21 | LocationUpdater: 9821 addresses defined\n",
-      "[INFO    ] 2022-09-16 15:31:21 | LocationUpdater: 223 addresses undefined\n"
+      "[INFO    ] 2022-09-19 12:41:10 | LocationUpdater: 10152 addresses in location table\n",
+      "[INFO    ] 2022-09-19 12:41:10 | LocationUpdater: 10172 addresses total\n",
+      "[INFO    ] 2022-09-19 12:41:10 | LocationUpdater: 10152 addresses defined\n",
+      "[INFO    ] 2022-09-19 12:41:10 | LocationUpdater: 20 addresses undefined\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0db322dd7ad845d7833ec9f0828a8bf6",
+       "model_id": "5f6045c5bc3845a38e9baa2350832512",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/223 [00:00<?, ?it/s]"
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -692,7 +694,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-16 15:32:36 | LocationUpdater: 223 new addresses found\n"
+      "[INFO    ] 2022-09-19 12:41:17 | LocationUpdater: 20 new addresses found\n"
      ]
     }
    ],
@@ -766,24 +768,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6494</th>\n",
-       "      <td>ул. 2-я Линия, 106/278</td>\n",
-       "      <td>44.68</td>\n",
-       "      <td>33.56</td>\n",
+       "      <th>1956</th>\n",
+       "      <td>Севастополь, район Гагаринский, Стрелецкая бухта, улица Ерошенко, 9</td>\n",
+       "      <td>44.60</td>\n",
+       "      <td>33.47</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2371</th>\n",
-       "      <td>Севастополь, район Ленинский, улица Частника, 24</td>\n",
-       "      <td>44.61</td>\n",
+       "      <th>6469</th>\n",
+       "      <td>садовое товарищество Скиф, 323</td>\n",
+       "      <td>44.55</td>\n",
+       "      <td>33.48</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2896</th>\n",
+       "      <td>Севастополь, садоводческое товарищество Первомайское</td>\n",
+       "      <td>44.51</td>\n",
        "      <td>33.51</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5110</th>\n",
-       "      <td>село Песчаное, улица Верхний Городок</td>\n",
-       "      <td>44.61</td>\n",
-       "      <td>33.53</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -791,15 +793,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   adr  latitude  longitude  \\\n",
-       "6494                            ул. 2-я Линия, 106/278     44.68      33.56   \n",
-       "2371  Севастополь, район Ленинский, улица Частника, 24     44.61      33.51   \n",
-       "5110              село Песчаное, улица Верхний Городок     44.61      33.53   \n",
+       "                                                                      adr  \\\n",
+       "1956  Севастополь, район Гагаринский, Стрелецкая бухта, улица Ерошенко, 9   \n",
+       "6469                                       садовое товарищество Скиф, 323   \n",
+       "2896                 Севастополь, садоводческое товарищество Первомайское   \n",
        "\n",
-       "     truncated  \n",
-       "6494     False  \n",
-       "2371     False  \n",
-       "5110     False  "
+       "      latitude  longitude truncated  \n",
+       "1956     44.60      33.47     False  \n",
+       "6469     44.55      33.48     False  \n",
+       "2896     44.51      33.51     False  "
       ]
      },
      "execution_count": 28,
@@ -840,7 +842,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "всего записей: 26448\n",
+      "всего записей: 28376\n",
       "записей без геометки: 0\n"
      ]
     }
@@ -874,38 +876,38 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 26448 entries, 0 to 26447\n",
+      "Int64Index: 28376 entries, 0 to 28375\n",
       "Data columns (total 26 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   avito_id       18949 non-null  float64       \n",
-      " 1   title          26448 non-null  object        \n",
-      " 2   price          26448 non-null  int64         \n",
-      " 3   adr            26448 non-null  object        \n",
-      " 4   description    26448 non-null  object        \n",
-      " 5   obj_name       26448 non-null  object        \n",
-      " 6   ts             26448 non-null  datetime64[ns]\n",
-      " 7   avito_page     18949 non-null  float64       \n",
-      " 8   place          26448 non-null  object        \n",
-      " 9   nrooms         26448 non-null  int64         \n",
-      " 10  floor          26448 non-null  int64         \n",
-      " 11  nfloors        26448 non-null  int64         \n",
-      " 12  area           26448 non-null  float64       \n",
-      " 13  is_studio      26448 non-null  bool          \n",
-      " 14  is_apartment   26448 non-null  bool          \n",
-      " 15  is_part        26448 non-null  bool          \n",
-      " 16  is_auction     26448 non-null  bool          \n",
-      " 17  is_openspace   26448 non-null  bool          \n",
-      " 18  is_roof        26448 non-null  bool          \n",
-      " 19  is_SNT         26448 non-null  bool          \n",
-      " 20  priceM         26448 non-null  float64       \n",
-      " 21  is_last_floor  26448 non-null  bool          \n",
-      " 22  cian_url       7499 non-null   object        \n",
-      " 23  cian_page      7499 non-null   float64       \n",
-      " 24  latitude       26448 non-null  float64       \n",
-      " 25  longitude      26448 non-null  float64       \n",
+      " 0   avito_id       19381 non-null  float64       \n",
+      " 1   title          28376 non-null  object        \n",
+      " 2   price          28376 non-null  int64         \n",
+      " 3   adr            28376 non-null  object        \n",
+      " 4   description    28376 non-null  object        \n",
+      " 5   obj_name       28376 non-null  object        \n",
+      " 6   ts             28376 non-null  datetime64[ns]\n",
+      " 7   avito_page     19381 non-null  float64       \n",
+      " 8   place          28376 non-null  object        \n",
+      " 9   nrooms         28376 non-null  int64         \n",
+      " 10  floor          28376 non-null  int64         \n",
+      " 11  nfloors        28376 non-null  int64         \n",
+      " 12  area           28376 non-null  float64       \n",
+      " 13  is_studio      28376 non-null  bool          \n",
+      " 14  is_apartment   28376 non-null  bool          \n",
+      " 15  is_part        28376 non-null  bool          \n",
+      " 16  is_auction     28376 non-null  bool          \n",
+      " 17  is_openspace   28376 non-null  bool          \n",
+      " 18  is_roof        28376 non-null  bool          \n",
+      " 19  is_SNT         28376 non-null  bool          \n",
+      " 20  priceM         28376 non-null  float64       \n",
+      " 21  is_last_floor  28376 non-null  bool          \n",
+      " 22  cian_url       8995 non-null   object        \n",
+      " 23  cian_page      8995 non-null   float64       \n",
+      " 24  latitude       28376 non-null  float64       \n",
+      " 25  longitude      28376 non-null  float64       \n",
       "dtypes: bool(8), datetime64[ns](1), float64(7), int64(4), object(6)\n",
-      "memory usage: 4.0+ MB\n"
+      "memory usage: 4.3+ MB\n"
      ]
     }
    ],
