--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -116,94 +116,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-16 15:01:46 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-16 15:01:46 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-16 15:01:48 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-16 15:01:48 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-16 15:01:54 | AvitoParser: 77 pages for read\n",
-      "[INFO    ] 2022-09-16 15:01:54 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-16 15:01:58 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-16 15:02:01 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-16 15:02:05 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-16 15:02:09 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-16 15:02:14 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-16 15:02:19 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-16 15:02:23 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-16 15:02:27 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-16 15:02:34 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-16 15:02:39 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-16 15:02:43 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-16 15:02:48 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-16 15:02:54 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-16 15:02:58 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-16 15:03:01 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-16 15:03:06 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-16 15:03:10 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-16 15:03:14 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-16 15:03:18 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-16 15:03:22 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-16 15:03:26 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-16 15:03:30 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-16 15:03:34 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-16 15:03:39 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-09-16 15:03:43 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-09-16 15:03:46 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-09-16 15:03:53 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-09-16 15:03:57 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-09-16 15:04:01 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-09-16 15:04:08 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-09-16 15:04:14 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-09-16 15:04:19 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-09-16 15:04:23 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-09-16 15:04:27 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-09-16 15:04:32 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-09-16 15:04:36 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-09-16 15:04:39 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-09-16 15:04:43 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-09-16 15:04:47 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-09-16 15:04:51 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-09-16 15:04:55 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-09-16 15:04:59 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-09-16 15:05:05 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-09-16 15:05:10 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-09-16 15:05:15 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-09-16 15:05:19 | AdsListParser: read page 46\n",
-      "[INFO    ] 2022-09-16 15:05:25 | AdsListParser: read page 47\n",
-      "[INFO    ] 2022-09-16 15:05:32 | AdsListParser: read page 48\n",
-      "[INFO    ] 2022-09-16 15:05:38 | AdsListParser: read page 49\n",
-      "[INFO    ] 2022-09-16 15:05:43 | AdsListParser: read page 50\n",
-      "[INFO    ] 2022-09-16 15:05:47 | AdsListParser: read page 51\n",
-      "[INFO    ] 2022-09-16 15:05:51 | AdsListParser: read page 52\n",
-      "[INFO    ] 2022-09-16 15:05:57 | AdsListParser: read page 53\n",
-      "[INFO    ] 2022-09-16 15:06:01 | AdsListParser: read page 54\n",
-      "[INFO    ] 2022-09-16 15:06:05 | AdsListParser: read page 55\n",
-      "[INFO    ] 2022-09-16 15:06:09 | AdsListParser: read page 56\n",
-      "[INFO    ] 2022-09-16 15:06:12 | AdsListParser: read page 57\n",
-      "[INFO    ] 2022-09-16 15:06:17 | AdsListParser: read page 58\n",
-      "[INFO    ] 2022-09-16 15:06:20 | AdsListParser: read page 59\n",
-      "[INFO    ] 2022-09-16 15:06:25 | AdsListParser: read page 60\n",
-      "[INFO    ] 2022-09-16 15:06:31 | AdsListParser: read page 61\n",
-      "[INFO    ] 2022-09-16 15:06:35 | AdsListParser: read page 62\n",
-      "[INFO    ] 2022-09-16 15:06:39 | AdsListParser: read page 63\n",
-      "[INFO    ] 2022-09-16 15:06:43 | AdsListParser: read page 64\n",
-      "[INFO    ] 2022-09-16 15:06:47 | AdsListParser: read page 65\n",
-      "[INFO    ] 2022-09-16 15:06:50 | AdsListParser: read page 66\n",
-      "[INFO    ] 2022-09-16 15:06:54 | AdsListParser: read page 67\n",
-      "[INFO    ] 2022-09-16 15:06:57 | AdsListParser: read page 68\n",
-      "[INFO    ] 2022-09-16 15:07:00 | AdsListParser: read page 69\n",
-      "[INFO    ] 2022-09-16 15:07:04 | AdsListParser: read page 70\n",
-      "[INFO    ] 2022-09-16 15:07:08 | AdsListParser: read page 71\n",
-      "[INFO    ] 2022-09-16 15:07:11 | AdsListParser: read page 72\n",
-      "[INFO    ] 2022-09-16 15:07:15 | AdsListParser: read page 73\n",
-      "[INFO    ] 2022-09-16 15:07:19 | AdsListParser: read page 74\n",
-      "[INFO    ] 2022-09-16 15:07:22 | AdsListParser: read page 75\n",
-      "[INFO    ] 2022-09-16 15:07:26 | AdsListParser: read page 76\n",
-      "[INFO    ] 2022-09-16 15:07:31 | AdsListParser: read page 77\n",
-      "[INFO    ] 2022-09-16 15:07:31 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-16 15:07:32 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "3852\n",
-      "CPU times: user 17.3 s, sys: 720 ms, total: 18.1 s\n",
-      "Wall time: 5min 46s\n"
+      "[INFO    ] 2022-09-19 12:30:53 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-19 12:30:53 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-19 12:30:55 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-19 12:30:55 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-19 12:31:04 | AvitoParser: 76 pages for read\n",
+      "[INFO    ] 2022-09-19 12:31:04 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-19 12:31:10 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-19 12:31:16 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-19 12:31:20 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-19 12:31:23 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-19 12:31:29 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-19 12:31:34 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-19 12:31:40 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-19 12:31:45 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-19 12:31:50 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-19 12:31:56 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-19 12:32:00 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-19 12:32:04 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-19 12:32:08 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-19 12:32:11 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-19 12:32:15 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-19 12:32:19 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-19 12:32:24 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-19 12:32:28 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-19 12:32:33 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-19 12:32:38 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-19 12:32:42 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-19 12:32:46 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-19 12:32:51 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-19 12:32:55 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-09-19 12:33:00 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-09-19 12:33:05 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-09-19 12:33:10 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-09-19 12:33:15 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-09-19 12:33:19 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-09-19 12:33:23 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-09-19 12:33:28 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-09-19 12:33:31 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-09-19 12:33:34 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-09-19 12:33:39 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-09-19 12:33:43 | AdsListParser: read page 35\n",
+      "[INFO    ] 2022-09-19 12:33:46 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-09-19 12:33:52 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-09-19 12:33:55 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-09-19 12:33:59 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-09-19 12:34:03 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-09-19 12:34:07 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-09-19 12:34:12 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-09-19 12:34:17 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-09-19 12:34:22 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-09-19 12:34:25 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-09-19 12:34:31 | AdsListParser: read page 46\n",
+      "[INFO    ] 2022-09-19 12:34:35 | AdsListParser: read page 47\n",
+      "[INFO    ] 2022-09-19 12:34:42 | AdsListParser: read page 48\n",
+      "[INFO    ] 2022-09-19 12:34:45 | AdsListParser: read page 49\n",
+      "[INFO    ] 2022-09-19 12:34:51 | AdsListParser: read page 50\n",
+      "[INFO    ] 2022-09-19 12:34:55 | AdsListParser: read page 51\n",
+      "[INFO    ] 2022-09-19 12:34:59 | AdsListParser: read page 52\n",
+      "[INFO    ] 2022-09-19 12:35:03 | AdsListParser: read page 53\n",
+      "[INFO    ] 2022-09-19 12:35:07 | AdsListParser: read page 54\n",
+      "[INFO    ] 2022-09-19 12:35:10 | AdsListParser: read page 55\n",
+      "[INFO    ] 2022-09-19 12:35:14 | AdsListParser: read page 56\n",
+      "[INFO    ] 2022-09-19 12:35:17 | AdsListParser: read page 57\n",
+      "[INFO    ] 2022-09-19 12:35:21 | AdsListParser: read page 58\n",
+      "[INFO    ] 2022-09-19 12:35:24 | AdsListParser: read page 59\n",
+      "[INFO    ] 2022-09-19 12:35:32 | AdsListParser: read page 60\n",
+      "[INFO    ] 2022-09-19 12:35:36 | AdsListParser: read page 61\n",
+      "[INFO    ] 2022-09-19 12:35:39 | AdsListParser: read page 62\n",
+      "[INFO    ] 2022-09-19 12:35:44 | AdsListParser: read page 63\n",
+      "[INFO    ] 2022-09-19 12:35:49 | AdsListParser: read page 64\n",
+      "[INFO    ] 2022-09-19 12:35:55 | AdsListParser: read page 65\n",
+      "[INFO    ] 2022-09-19 12:36:00 | AdsListParser: read page 66\n",
+      "[INFO    ] 2022-09-19 12:36:04 | AdsListParser: read page 67\n",
+      "[INFO    ] 2022-09-19 12:36:08 | AdsListParser: read page 68\n",
+      "[INFO    ] 2022-09-19 12:36:13 | AdsListParser: read page 69\n",
+      "[INFO    ] 2022-09-19 12:36:18 | AdsListParser: read page 70\n",
+      "[INFO    ] 2022-09-19 12:36:23 | AdsListParser: read page 71\n",
+      "[INFO    ] 2022-09-19 12:36:28 | AdsListParser: read page 72\n",
+      "[INFO    ] 2022-09-19 12:36:32 | AdsListParser: read page 73\n",
+      "[INFO    ] 2022-09-19 12:36:35 | AdsListParser: read page 74\n",
+      "[INFO    ] 2022-09-19 12:36:40 | AdsListParser: read page 75\n",
+      "[INFO    ] 2022-09-19 12:36:43 | AdsListParser: read page 76\n",
+      "[INFO    ] 2022-09-19 12:36:43 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-19 12:36:44 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3766\n",
+      "CPU times: user 16.9 s, sys: 787 ms, total: 17.7 s\n",
+      "Wall time: 5min 51s\n"
      ]
     }
    ],
@@ -231,8 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3852\n",
-      "3391\n"
+      "3766\n",
+      "3555\n"
      ]
     }
    ],
@@ -304,27 +303,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2232</th>\n",
-       "      <td>2229269027</td>\n",
-       "      <td>Объявление «2-к. квартира, 74,4 м², 2/5 эт.» 6 фотографий</td>\n",
-       "      <td>9300000</td>\n",
+       "      <th>2905</th>\n",
+       "      <td>2217273855</td>\n",
+       "      <td>Объявление «3-к. квартира, 80 м², 1/5 эт.» 19 фотографий</td>\n",
+       "      <td>9450000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Военных Строителей, 12/3</td>\n",
-       "      <td>Продаётся 2 комнатная квартира общей площадью 74.4кв. М. Хороший район, в пешей доступности пляж. Развитая инфраструктура. Квартира расположена на 2 этаже 5 этажного дома. Дом Сдан. Документы Российского образца, готовы к сделке. \\nПродажа возможна с исполь</td>\n",
-       "      <td>52</td>\n",
-       "      <td>2022-09-16 15:07:31.631801</td>\n",
+       "      <td>ул. Николая Музыки, 68</td>\n",
+       "      <td>«Чешка»-уникальная комфортная планировка для трехкомнатной квартиры в самом центре Ленинского района.\\n\\n#Ипотека #Сбер #Веранда #Благоустройство #Большая_ кухня.\\n\\n80 м2 Широкий коридор и большая кухня 10 м2, узаконенная пристройка и погреб в 9,2 м2, три спа</td>\n",
+       "      <td>62</td>\n",
+       "      <td>2022-09-19 12:36:43.740090</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>864</th>\n",
-       "      <td>2553443030</td>\n",
-       "      <td>Объявление «Квартира-студия, 31,5 м², 3/9 эт.» 21 фотография</td>\n",
-       "      <td>4550000</td>\n",
+       "      <th>3070</th>\n",
+       "      <td>2493107238</td>\n",
+       "      <td>Объявление «1-к. квартира, 54,8 м², 4/10 эт.» 20 фотографий</td>\n",
+       "      <td>7650000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Горпищенко, 139</td>\n",
-       "      <td>Дом Сдан! \\n\\nСемейная Ипотека, Материнский Капитал Первым Взносом! \\nКвартира-студия на третьем этаже девятиэтажного дома в черновой отделке от застройщика. \\nПросторная и светлая, с большой лоджией. \\nВид из окна на сосновый лес! \\nВ студии установлено автоном</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2022-09-16 15:07:31.631801</td>\n",
+       "      <td>пр-т Победы, 44</td>\n",
+       "      <td>Продаётся отличная крупногабаритная квартира от собственника. В квартире выполнен хороший ремонт из дорогостоящих материалов. Частично остаётся мебель, а именно кухня и прихожая. Удобная планировка квартиры: \\n- коридор 9.6 кв. М. \\n- совместный санузел 4.7</td>\n",
+       "      <td>66</td>\n",
+       "      <td>2022-09-19 12:36:43.740090</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -332,25 +331,21 @@
        "</div>"
       ],
       "text/plain": [
-       "        avito_id  \\\n",
-       "2232  2229269027   \n",
-       "864   2553443030   \n",
+       "        avito_id                                                        title  \\\n",
+       "2905  2217273855     Объявление «3-к. квартира, 80 м², 1/5 эт.» 19 фотографий   \n",
+       "3070  2493107238  Объявление «1-к. квартира, 54,8 м², 4/10 эт.» 20 фотографий   \n",
        "\n",
-       "                                                             title    price  \\\n",
-       "2232     Объявление «2-к. квартира, 74,4 м², 2/5 эт.» 6 фотографий  9300000   \n",
-       "864   Объявление «Квартира-студия, 31,5 м², 3/9 эт.» 21 фотография  4550000   \n",
+       "        price obj_name                     adr  \\\n",
+       "2905  9450000           ул. Николая Музыки, 68   \n",
+       "3070  7650000                  пр-т Победы, 44   \n",
        "\n",
-       "     obj_name                           adr  \\\n",
-       "2232           ул. Военных Строителей, 12/3   \n",
-       "864                     ул. Горпищенко, 139   \n",
-       "\n",
-       "                                                                                                                                                                                                                                                                 description  \\\n",
-       "2232       Продаётся 2 комнатная квартира общей площадью 74.4кв. М. Хороший район, в пешей доступности пляж. Развитая инфраструктура. Квартира расположена на 2 этаже 5 этажного дома. Дом Сдан. Документы Российского образца, готовы к сделке. \\nПродажа возможна с исполь   \n",
-       "864   Дом Сдан! \\n\\nСемейная Ипотека, Материнский Капитал Первым Взносом! \\nКвартира-студия на третьем этаже девятиэтажного дома в черновой отделке от застройщика. \\nПросторная и светлая, с большой лоджией. \\nВид из окна на сосновый лес! \\nВ студии установлено автоном   \n",
+       "                                                                                                                                                                                                                                                               description  \\\n",
+       "2905  «Чешка»-уникальная комфортная планировка для трехкомнатной квартиры в самом центре Ленинского района.\\n\\n#Ипотека #Сбер #Веранда #Благоустройство #Большая_ кухня.\\n\\n80 м2 Широкий коридор и большая кухня 10 м2, узаконенная пристройка и погреб в 9,2 м2, три спа   \n",
+       "3070    Продаётся отличная крупногабаритная квартира от собственника. В квартире выполнен хороший ремонт из дорогостоящих материалов. Частично остаётся мебель, а именно кухня и прихожая. Удобная планировка квартиры: \\n- коридор 9.6 кв. М. \\n- совместный санузел 4.7    \n",
        "\n",
        "      page                         ts       place  \n",
-       "2232    52 2022-09-16 15:07:31.631801  sevastopol  \n",
-       "864     20 2022-09-16 15:07:31.631801  sevastopol  "
+       "2905    62 2022-09-19 12:36:43.740090  sevastopol  \n",
+       "3070    66 2022-09-19 12:36:43.740090  sevastopol  "
       ]
      },
      "execution_count": 10,
