--- a/01c-avito-downloader-house.ipynb
+++ b/01c-avito-downloader-house.ipynb
@@ -121,20 +121,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-16 15:24:05 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-16 15:24:05 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-16 15:24:07 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-16 15:24:07 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-16 15:24:14 | AvitoParser: 3 pages for read\n",
-      "[INFO    ] 2022-09-16 15:24:14 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-16 15:24:18 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-16 15:24:21 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-16 15:24:24 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-16 15:24:24 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-16 15:24:24 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "123\n",
-      "CPU times: user 1.44 s, sys: 120 ms, total: 1.56 s\n",
-      "Wall time: 19.9 s\n"
+      "[INFO    ] 2022-09-19 12:40:14 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-19 12:40:14 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-19 12:40:16 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-19 12:40:16 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-19 12:40:22 | AvitoParser: 3 pages for read\n",
+      "[INFO    ] 2022-09-19 12:40:22 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-19 12:40:28 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-19 12:40:32 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-19 12:40:34 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-19 12:40:34 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-19 12:40:34 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "121\n",
+      "CPU times: user 1.43 s, sys: 103 ms, total: 1.53 s\n",
+      "Wall time: 20.8 s\n"
      ]
     }
    ],
@@ -162,8 +162,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123\n",
-      "123\n"
+      "121\n",
+      "121\n"
      ]
     }
    ],
@@ -212,51 +212,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>1964958064</td>\n",
-       "      <td>Объявление «Дом 120 м² на участке 6 сот.» 8 фотографий</td>\n",
-       "      <td>5300000</td>\n",
+       "      <th>95</th>\n",
+       "      <td>2019015750</td>\n",
+       "      <td>Объявление «Дом 235 м² на участке 6,3 сот.» 28 фотографий</td>\n",
+       "      <td>12800000</td>\n",
        "      <td></td>\n",
-       "      <td>квартал Яны-Маалле</td>\n",
-       "      <td>Продаётся дом с прилегающим участком в пригороде Судака! Расположен в 2-х км от моря! Имеются все необходимые документы на дом и участок(право собственности)! Коммуникации: свет, Газ, центральная Канализация, вода! Всё остальные вопросы по телефону!</td>\n",
+       "      <td>с. Миндальное, СНТ Солнечная Долина, Рязанская ул.</td>\n",
+       "      <td>Внимание! Срочно! Продаётся дачный жилой дом общей площадью 235 кв. М. Вместе с хозяйственными постройками площадью более 30 кв. М. Дом расположен на земельном участке площадью 6,3 соток. Целевое назначение земли — ведение садоводства. Дачный жилой дом с п</td>\n",
        "      <td>2</td>\n",
-       "      <td>2022-09-16 15:24:24.472345</td>\n",
+       "      <td>2022-09-19 12:40:34.305295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>2491402063</td>\n",
-       "      <td>Объявление «Дом 325 м² на участке 6,7 сот.» 12 фотографий</td>\n",
-       "      <td>35000000</td>\n",
+       "      <th>94</th>\n",
+       "      <td>2461497299</td>\n",
+       "      <td>Объявление «Дом 280 м² на участке 5 сот.» 14 фотографий</td>\n",
+       "      <td>24500000</td>\n",
        "      <td></td>\n",
-       "      <td>с. Миндальное, СНТ Солнечная Долина, Центральный пр-т, 586</td>\n",
-       "      <td>Продаю Гостевой дом 7 номеров + цокольный этаж вся техника и мебель новое большой Бассейн.</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2022-09-16 15:24:24.472345</td>\n",
+       "      <td>Юго-западная ул.</td>\n",
+       "      <td>Продается гостевой дом по адресу: Респ. Крым, г. Судак микрорайон Юго-Западный. Гостевой дом на 13 номеров укомплектованных всем необходимым оборудованием. На территории дома находится летняя кухня, столовая, зона барбекю. Вода, канализация, электроэнергия</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-09-19 12:40:34.305295</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                                      title  \\\n",
-       "97   1964958064     Объявление «Дом 120 м² на участке 6 сот.» 8 фотографий   \n",
-       "116  2491402063  Объявление «Дом 325 м² на участке 6,7 сот.» 12 фотографий   \n",
+       "      avito_id                                                      title  \\\n",
+       "95  2019015750  Объявление «Дом 235 м² на участке 6,3 сот.» 28 фотографий   \n",
+       "94  2461497299    Объявление «Дом 280 м² на участке 5 сот.» 14 фотографий   \n",
        "\n",
-       "        price obj_name  \\\n",
-       "97    5300000            \n",
-       "116  35000000            \n",
+       "       price obj_name                                                 adr  \\\n",
+       "95  12800000           с. Миндальное, СНТ Солнечная Долина, Рязанская ул.   \n",
+       "94  24500000                                             Юго-западная ул.   \n",
        "\n",
-       "                                                            adr  \\\n",
-       "97                                           квартал Яны-Маалле   \n",
-       "116  с. Миндальное, СНТ Солнечная Долина, Центральный пр-т, 586   \n",
+       "                                                                                                                                                                                                                                                         description  \\\n",
+       "95  Внимание! Срочно! Продаётся дачный жилой дом общей площадью 235 кв. М. Вместе с хозяйственными постройками площадью более 30 кв. М. Дом расположен на земельном участке площадью 6,3 соток. Целевое назначение земли — ведение садоводства. Дачный жилой дом с п   \n",
+       "94  Продается гостевой дом по адресу: Респ. Крым, г. Судак микрорайон Юго-Западный. Гостевой дом на 13 номеров укомплектованных всем необходимым оборудованием. На территории дома находится летняя кухня, столовая, зона барбекю. Вода, канализация, электроэнергия   \n",
        "\n",
-       "                                                                                                                                                                                                                                                   description  \\\n",
-       "97   Продаётся дом с прилегающим участком в пригороде Судака! Расположен в 2-х км от моря! Имеются все необходимые документы на дом и участок(право собственности)! Коммуникации: свет, Газ, центральная Канализация, вода! Всё остальные вопросы по телефону!   \n",
-       "116                                                                                                                                                                 Продаю Гостевой дом 7 номеров + цокольный этаж вся техника и мебель новое большой Бассейн.   \n",
-       "\n",
-       "     page                         ts  \n",
-       "97      2 2022-09-16 15:24:24.472345  \n",
-       "116     3 2022-09-16 15:24:24.472345  "
+       "    page                         ts  \n",
+       "95     2 2022-09-19 12:40:34.305295  \n",
+       "94     2 2022-09-19 12:40:34.305295  "
       ]
      },
      "execution_count": 8,
