--- a/01c-avito-downloader-house.ipynb
+++ b/01c-avito-downloader-house.ipynb
@@ -121,20 +121,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-19 12:40:14 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-19 12:40:14 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-19 12:40:16 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-19 12:40:16 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-19 12:40:22 | AvitoParser: 3 pages for read\n",
-      "[INFO    ] 2022-09-19 12:40:22 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-19 12:40:28 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-19 12:40:32 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-19 12:40:34 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-19 12:40:34 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-19 12:40:34 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "[INFO    ] 2022-09-22 09:58:54 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-22 09:58:54 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-22 09:58:56 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-22 09:58:56 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-22 09:59:03 | AvitoParser: 3 pages for read\n",
+      "[INFO    ] 2022-09-22 09:59:03 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-22 09:59:07 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-22 09:59:10 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-22 09:59:12 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-22 09:59:12 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-22 09:59:13 | DownloaderSeleniumFirefox: close virtual browser\n",
       "121\n",
-      "CPU times: user 1.43 s, sys: 103 ms, total: 1.53 s\n",
-      "Wall time: 20.8 s\n"
+      "CPU times: user 1.46 s, sys: 71.1 ms, total: 1.53 s\n",
+      "Wall time: 19.6 s\n"
      ]
     }
    ],
@@ -212,26 +212,26 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>2019015750</td>\n",
-       "      <td>Объявление «Дом 235 м² на участке 6,3 сот.» 28 фотографий</td>\n",
-       "      <td>12800000</td>\n",
+       "      <th>96</th>\n",
+       "      <td>2450817288</td>\n",
+       "      <td>Объявление «Дом 120 м² на участке 6 сот.» с фотографией</td>\n",
+       "      <td>7000000</td>\n",
        "      <td></td>\n",
-       "      <td>с. Миндальное, СНТ Солнечная Долина, Рязанская ул.</td>\n",
-       "      <td>Внимание! Срочно! Продаётся дачный жилой дом общей площадью 235 кв. М. Вместе с хозяйственными постройками площадью более 30 кв. М. Дом расположен на земельном участке площадью 6,3 соток. Целевое назначение земли — ведение садоводства. Дачный жилой дом с п</td>\n",
+       "      <td>ул. Аджибей</td>\n",
+       "      <td>Продаю дом в курортном городе. Г. Судак, квартал Яны-Маале, ул. Аджибей. Дом 120 кв. М, участок 6 соток, в черте города. До моря 3 км. Рядом проходит газовая магистраль. Хорошо развита инфраструктура: рядом рынок, магазины, школа, садик. Отличная транспорт</td>\n",
        "      <td>2</td>\n",
-       "      <td>2022-09-19 12:40:34.305295</td>\n",
+       "      <td>2022-09-22 09:59:12.841169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>2461497299</td>\n",
-       "      <td>Объявление «Дом 280 м² на участке 5 сот.» 14 фотографий</td>\n",
-       "      <td>24500000</td>\n",
+       "      <th>37</th>\n",
+       "      <td>2491402063</td>\n",
+       "      <td>Объявление «Дом 325 м² на участке 6,7 сот.» 12 фотографий</td>\n",
+       "      <td>35000000</td>\n",
        "      <td></td>\n",
-       "      <td>Юго-западная ул.</td>\n",
-       "      <td>Продается гостевой дом по адресу: Респ. Крым, г. Судак микрорайон Юго-Западный. Гостевой дом на 13 номеров укомплектованных всем необходимым оборудованием. На территории дома находится летняя кухня, столовая, зона барбекю. Вода, канализация, электроэнергия</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2022-09-19 12:40:34.305295</td>\n",
+       "      <td>с. Миндальное, СНТ Солнечная Долина, Центральный пр-т, 586</td>\n",
+       "      <td>Продаю Гостевой дом 7 номеров + цокольный этаж вся техника и мебель новое большой Бассейн.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-09-22 09:59:12.841169</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -239,20 +239,24 @@
       ],
       "text/plain": [
        "      avito_id                                                      title  \\\n",
-       "95  2019015750  Объявление «Дом 235 м² на участке 6,3 сот.» 28 фотографий   \n",
-       "94  2461497299    Объявление «Дом 280 м² на участке 5 сот.» 14 фотографий   \n",
+       "96  2450817288    Объявление «Дом 120 м² на участке 6 сот.» с фотографией   \n",
+       "37  2491402063  Объявление «Дом 325 м² на участке 6,7 сот.» 12 фотографий   \n",
        "\n",
-       "       price obj_name                                                 adr  \\\n",
-       "95  12800000           с. Миндальное, СНТ Солнечная Долина, Рязанская ул.   \n",
-       "94  24500000                                             Юго-западная ул.   \n",
+       "       price obj_name  \\\n",
+       "96   7000000            \n",
+       "37  35000000            \n",
+       "\n",
+       "                                                           adr  \\\n",
+       "96                                                 ул. Аджибей   \n",
+       "37  с. Миндальное, СНТ Солнечная Долина, Центральный пр-т, 586   \n",
        "\n",
        "                                                                                                                                                                                                                                                         description  \\\n",
-       "95  Внимание! Срочно! Продаётся дачный жилой дом общей площадью 235 кв. М. Вместе с хозяйственными постройками площадью более 30 кв. М. Дом расположен на земельном участке площадью 6,3 соток. Целевое назначение земли — ведение садоводства. Дачный жилой дом с п   \n",
-       "94  Продается гостевой дом по адресу: Респ. Крым, г. Судак микрорайон Юго-Западный. Гостевой дом на 13 номеров укомплектованных всем необходимым оборудованием. На территории дома находится летняя кухня, столовая, зона барбекю. Вода, канализация, электроэнергия   \n",
+       "96  Продаю дом в курортном городе. Г. Судак, квартал Яны-Маале, ул. Аджибей. Дом 120 кв. М, участок 6 соток, в черте города. До моря 3 км. Рядом проходит газовая магистраль. Хорошо развита инфраструктура: рядом рынок, магазины, школа, садик. Отличная транспорт   \n",
+       "37                                                                                                                                                                        Продаю Гостевой дом 7 номеров + цокольный этаж вся техника и мебель новое большой Бассейн.   \n",
        "\n",
        "    page                         ts  \n",
-       "95     2 2022-09-19 12:40:34.305295  \n",
-       "94     2 2022-09-19 12:40:34.305295  "
+       "96     2 2022-09-22 09:59:12.841169  \n",
+       "37     1 2022-09-22 09:59:12.841169  "
       ]
      },
      "execution_count": 8,
