--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -116,40 +116,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-19 12:38:09 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-19 12:38:09 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-19 12:38:11 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-19 12:38:11 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-19 12:38:20 | AvitoParser: 23 pages for read\n",
-      "[INFO    ] 2022-09-19 12:38:20 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-19 12:38:23 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-19 12:38:28 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-19 12:38:31 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-19 12:38:35 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-19 12:38:39 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-19 12:38:45 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-19 12:38:49 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-19 12:38:53 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-19 12:38:58 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-19 12:39:04 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-19 12:39:07 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-19 12:39:10 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-19 12:39:14 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-19 12:39:17 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-19 12:39:21 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-19 12:39:26 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-19 12:39:30 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-19 12:39:34 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-19 12:39:40 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-19 12:39:44 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-19 12:39:48 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-19 12:39:51 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-19 12:39:53 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-19 12:39:53 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-19 12:39:54 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "1104\n",
-      "CPU times: user 4.54 s, sys: 185 ms, total: 4.72 s\n",
-      "Wall time: 1min 45s\n"
+      "[INFO    ] 2022-09-22 09:55:57 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-22 09:55:57 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-22 09:55:59 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-22 09:55:59 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-22 09:56:05 | AvitoParser: 23 pages for read\n",
+      "[INFO    ] 2022-09-22 09:56:05 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-22 09:56:09 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-22 09:56:12 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-22 09:56:15 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-22 09:56:17 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-22 09:56:21 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-22 09:56:23 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-22 09:56:26 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-22 09:56:29 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-22 09:56:34 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-22 09:56:39 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-22 09:56:42 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-22 09:56:45 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-22 09:56:47 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-22 09:56:50 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-22 09:56:53 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-22 09:56:56 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-22 09:56:59 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-22 09:57:02 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-22 09:57:05 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-22 09:57:08 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-22 09:57:10 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-22 09:57:13 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-22 09:57:15 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-22 09:57:15 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-22 09:57:16 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "1109\n",
+      "CPU times: user 4.56 s, sys: 143 ms, total: 4.7 s\n",
+      "Wall time: 1min 18s\n"
      ]
     }
    ],
@@ -177,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1104\n",
-      "1104\n"
+      "1109\n",
+      "1109\n"
      ]
     }
    ],
@@ -250,27 +250,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>437</th>\n",
-       "      <td>2448235138</td>\n",
-       "      <td>Объявление «Участок 8 сот. (ИЖС)» 5 фотографий</td>\n",
-       "      <td>3500000</td>\n",
+       "      <th>998</th>\n",
+       "      <td>2534051202</td>\n",
+       "      <td>Объявление «Участок 6,2 сот. (ИЖС)» с фотографией</td>\n",
+       "      <td>9505000</td>\n",
        "      <td></td>\n",
-       "      <td>с. Флотское, Ягодная ул.</td>\n",
-       "      <td>Арт. 24777666 Торг после осмотра. \\n\\nПродам видовой участок 8 соток (Ижс), село Флотское. \\nКоммуникации: \\nэлектричество — 15 квт.\\nВода — центральный водопровод по границе участка.\\n\\nГаз — проведение запланировано на конец 2022 года.\\n\\nУчасток правильной формы</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2022-09-19 12:39:53.571271</td>\n",
+       "      <td>Гагаринский муниципальный округ, микрорайон Казачья Бухта, Рубежная ул., 109</td>\n",
+       "      <td>Продается.\\nВидовой земельный участок 6,18 соток в коттеджном поселке СТ «Пилот» на берегу Казачьей бухты. Коммуникации: электричество, городской водопровод, центральная канализация, газ — на границе участка. Участок находится в районе с развитой инфраструк</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2022-09-22 09:57:15.622658</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>411</th>\n",
-       "      <td>2529306780</td>\n",
-       "      <td>Объявление «Участок 7,5 сот. (ИЖС)» с фотографией</td>\n",
-       "      <td>7000000</td>\n",
+       "      <th>403</th>\n",
+       "      <td>2532638024</td>\n",
+       "      <td>Объявление «Участок 4,4 сот. (ИЖС)» 4 фотографии</td>\n",
+       "      <td>4500000</td>\n",
        "      <td></td>\n",
-       "      <td>Пасечный пр., 3</td>\n",
-       "      <td>Участок 7,5 соток ижс. Выход на 2 улицы. На участке проведено вода, свет ( заведено 380), очистные ( сданы в архитектуру), видеонаблюдение ( +онлайн), интернет. Имеется разрешение на строительство дома все документы чистые, российские. Один собственник Я.</td>\n",
+       "      <td>балка Карантинная</td>\n",
+       "      <td>Кадастровый номер: \\n91:03:003001:1745.\\nУчасток на первой линии, центральная асфальтированная дорога, рядом остановки, место для парковки, магазин сантехники, автомойка. Есть разрешение на подключение в гор воде, разрешение на подключения эл-ва в процессе.</td>\n",
        "      <td>9</td>\n",
-       "      <td>2022-09-19 12:39:53.571271</td>\n",
+       "      <td>2022-09-22 09:57:15.622658</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -279,20 +279,24 @@
       ],
       "text/plain": [
        "       avito_id                                              title    price  \\\n",
-       "437  2448235138     Объявление «Участок 8 сот. (ИЖС)» 5 фотографий  3500000   \n",
-       "411  2529306780  Объявление «Участок 7,5 сот. (ИЖС)» с фотографией  7000000   \n",
+       "998  2534051202  Объявление «Участок 6,2 сот. (ИЖС)» с фотографией  9505000   \n",
+       "403  2532638024   Объявление «Участок 4,4 сот. (ИЖС)» 4 фотографии  4500000   \n",
        "\n",
-       "    obj_name                       adr  \\\n",
-       "437           с. Флотское, Ягодная ул.   \n",
-       "411                    Пасечный пр., 3   \n",
+       "    obj_name  \\\n",
+       "998            \n",
+       "403            \n",
        "\n",
-       "                                                                                                                                                                                                                                                                   description  \\\n",
-       "437  Арт. 24777666 Торг после осмотра. \\n\\nПродам видовой участок 8 соток (Ижс), село Флотское. \\nКоммуникации: \\nэлектричество — 15 квт.\\nВода — центральный водопровод по границе участка.\\n\\nГаз — проведение запланировано на конец 2022 года.\\n\\nУчасток правильной формы   \n",
-       "411           Участок 7,5 соток ижс. Выход на 2 улицы. На участке проведено вода, свет ( заведено 380), очистные ( сданы в архитектуру), видеонаблюдение ( +онлайн), интернет. Имеется разрешение на строительство дома все документы чистые, российские. Один собственник Я.    \n",
+       "                                                                              adr  \\\n",
+       "998  Гагаринский муниципальный округ, микрорайон Казачья Бухта, Рубежная ул., 109   \n",
+       "403                                                             балка Карантинная   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                            description  \\\n",
+       "998   Продается.\\nВидовой земельный участок 6,18 соток в коттеджном поселке СТ «Пилот» на берегу Казачьей бухты. Коммуникации: электричество, городской водопровод, центральная канализация, газ — на границе участка. Участок находится в районе с развитой инфраструк   \n",
+       "403  Кадастровый номер: \\n91:03:003001:1745.\\nУчасток на первой линии, центральная асфальтированная дорога, рядом остановки, место для парковки, магазин сантехники, автомойка. Есть разрешение на подключение в гор воде, разрешение на подключения эл-ва в процессе.    \n",
        "\n",
        "     page                         ts       place  \n",
-       "437     9 2022-09-19 12:39:53.571271  sevastopol  \n",
-       "411     9 2022-09-19 12:39:53.571271  sevastopol  "
+       "998    20 2022-09-22 09:57:15.622658  sevastopol  \n",
+       "403     9 2022-09-22 09:57:15.622658  sevastopol  "
       ]
      },
      "execution_count": 10,
